--- a/composer.json
+++ b/composer.json
@@ -50,12 +50,12 @@
       ]
     },
     "suggest": {
-        "filp/whoops": "^2.0 to use the Whoops error handler",
-        "zendframework/zend-expressive-helpers": "^1.0 for its UrlHelper, ServerUrlHelper, and BodyParseMiddleware",
-        "aura/di": "3.0.*@beta to make use of Aura.Di dependency injection container",
+        "filp/whoops": "^2.1 to use the Whoops error handler",
+        "zendframework/zend-expressive-helpers": "^3.0 for its UrlHelper, ServerUrlHelper, and BodyParseMiddleware",
+        "aura/di": "^3.2 to make use of Aura.Di dependency injection container",
         "xtreamwayz/pimple-container-interop": "^1.0 to use Pimple for dependency injection",
         "zendframework/zend-expressive-tooling": "For migration and development tools; require it with the --dev flag",
-        "zendframework/zend-servicemanager": "^2.5 to use zend-servicemanager for dependency injection"
+        "zendframework/zend-servicemanager": "^3.2 to use zend-servicemanager for dependency injection"
     },
     "bin": [
         "bin/expressive-tooling"
