Allow expressive-router ^2.0 as well as ^1.1 with Expressive 1.1
It is possible to use version 2.0 of libraries:
- zend-expressive-aurarouter
- zend-expressive-fastroute
- zend-expressive-zendrouter

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "container-interop/container-interop": "^1.1",
         "psr/http-message": "^1.0",
         "zendframework/zend-diactoros": "^1.1",
-        "zendframework/zend-expressive-router": "^1.1",
+        "zendframework/zend-expressive-router": "^1.1 || ^2.0",
         "zendframework/zend-expressive-template": "^1.0.1",
         "zendframework/zend-stratigility": "^1.3.3"
     },
@@ -28,9 +28,9 @@
         "filp/whoops": "^1.1 || ^2.0",
         "phpunit/phpunit": "^4.7",
         "zendframework/zend-coding-standard": "~1.0.0",
-        "zendframework/zend-expressive-aurarouter": "^1.0",
-        "zendframework/zend-expressive-fastroute": "^1.0",
-        "zendframework/zend-expressive-zendrouter": "^1.0",
+        "zendframework/zend-expressive-aurarouter": "^1.0 || ^2.0",
+        "zendframework/zend-expressive-fastroute": "^1.0 || ^2.0",
+        "zendframework/zend-expressive-zendrouter": "^1.0 || ^2.0",
         "zendframework/zend-servicemanager": "^2.6",
         "malukenho/docheader": "^0.1.5",
         "mockery/mockery": "^0.9.5"
