Adds a cookbook entry covering autowiring of routes and pipeline middleware
Per discussion on zendframework/zend-expressive-skeleton#129, we need to
cover how to autowire routing definitions, and, optionally, pipeline
middleware, when using the programmatic approach. The solution is
delegator factories.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,6 +41,7 @@ pages:
             - 'Body Parsing Middleware': features/helpers/body-parse.md
         - Emitters: features/emitters.md
     - Cookbook:
+        - 'Autowiring routes and pipeline middleware': cookbook/autowiring-routes-and-pipelines.md
         - 'Prepending a common path to all routes': cookbook/common-prefix-for-routes.md
         - 'Route-specific middleware pipelines': cookbook/route-specific-pipeline.md
         - 'Setting custom 404 page handling': cookbook/custom-404-page-handling.md
