--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,9 @@
         "zendframework/zend-expressive-zendrouter": "^2.0",
         "zendframework/zend-servicemanager": "^2.6 || ^3.1.1"
     },
+    "conflict": {
+        "container-interop/container-interop": "<1.2.0"
+    },
     "autoload": {
       "psr-4": {
         "Zend\\Expressive\\": "src/"
