--- a/composer.json
+++ b/composer.json
@@ -17,24 +17,24 @@
     },
     "require": {
         "php": "^5.6 || ^7.0",
+        "fig/http-message-util": "^1.1.2",
         "psr/container": "^1.0",
-        "psr/http-message": "^1.0",
-        "zendframework/zend-diactoros": "^1.1",
+        "psr/http-message": "^1.0.1",
+        "zendframework/zend-diactoros": "^1.3.10",
         "zendframework/zend-expressive-router": "^2.1",
         "zendframework/zend-expressive-template": "^1.0.4",
-        "zendframework/zend-stratigility": "^2.0.1",
-        "fig/http-message-util": "^1.1"
+        "zendframework/zend-stratigility": "^2.0.1"
     },
     "require-dev": {
-        "filp/whoops": "^1.1 || ^2.0",
+        "filp/whoops": "^2.1.6 || ^1.1.10",
         "malukenho/docheader": "^0.1.5",
         "mockery/mockery": "^0.9.5",
-        "phpunit/phpunit": "^5.7.12 || ^6.0.6",
+        "phpunit/phpunit": "^6.0.8 || ^5.7.15",
         "zendframework/zend-coding-standard": "~1.0.0",
         "zendframework/zend-expressive-aurarouter": "^2.0",
         "zendframework/zend-expressive-fastroute": "^2.0",
-        "zendframework/zend-expressive-zendrouter": "^2.0",
-        "zendframework/zend-servicemanager": "^2.6 || ^3.1.1"
+        "zendframework/zend-expressive-zendrouter": "^2.0.1",
+        "zendframework/zend-servicemanager": "^3.3 || ^2.7.8"
     },
     "conflict": {
         "container-interop/container-interop": "<1.2.0"
@@ -58,7 +58,7 @@
         "aura/di": "^3.2 to make use of Aura.Di dependency injection container",
         "xtreamwayz/pimple-container-interop": "^1.0 to use Pimple for dependency injection",
         "zendframework/zend-expressive-tooling": "For migration and development tools; require it with the --dev flag",
-        "zendframework/zend-servicemanager": "^3.2 to use zend-servicemanager for dependency injection"
+        "zendframework/zend-servicemanager": "^3.3 to use zend-servicemanager for dependency injection"
     },
     "bin": [
         "bin/expressive-tooling"
