--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,7 @@ pages:
         - Containers:
             - Introduction: features/container/intro.md
             - 'Container Factories': features/container/factories.md
+            - 'Delegator Factories': features/container/delegator-factories.md
             - 'Using zend-servicemanager': features/container/zend-servicemanager.md
             - 'Using Pimple': features/container/pimple.md
             - 'Using Aura.Di': features/container/aura-di.md
