--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,6 +40,7 @@ pages:
             - UrlHelper: features/helpers/url-helper.md
             - ServerUrlHelper: features/helpers/server-url-helper.md
             - 'Body Parsing Middleware': features/helpers/body-parse.md
+            - 'Content-Length Middleware': features/helpers/content-length.md
         - Emitters: features/emitters.md
     - Cookbook:
         - 'Autowiring routes and pipeline middleware': cookbook/autowiring-routes-and-pipelines.md
