--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,11 @@
 /doc export-ignore
 /test export-ignore
+/.coveralls.yml export-ignore
+/.docheader export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /.travis.yml export-ignore
+/composer.lock export-ignore
 /mkdocs.yml export-ignore
 /phpcs.xml export-ignore
 /phpunit.xml.dist export-ignore
