--- a/composer.json
+++ b/composer.json
@@ -31,10 +31,6 @@
         {
             "type": "git",
             "url": "https://github.com/webimpress/zend-expressive-router.git"
-        },
-        {
-            "type": "git",
-            "url": "https://github.com/webimpress/zend-stratigility.git"
         }
     ],
     "require": {
@@ -46,7 +42,7 @@
         "zendframework/zend-diactoros": "^1.3.10",
         "zendframework/zend-expressive-router": "dev-feature/psr-15 as 2.2",
         "zendframework/zend-expressive-template": "^1.0.4",
-        "zendframework/zend-stratigility": "dev-feature/psr-15 as 2.2"
+        "zendframework/zend-stratigility": "dev-release-3.0.0"
     },
     "require-dev": {
         "filp/whoops": "^1.1.10 || ^2.1.13",
