--- a/composer.json
+++ b/composer.json
@@ -27,12 +27,6 @@
     "config": {
         "sort-packages": true
     },
-    "repositories": [
-        {
-            "type": "git",
-            "url": "https://github.com/webimpress/zend-expressive-router.git"
-        }
-    ],
     "require": {
         "php": "^7.1",
         "fig/http-message-util": "^1.1.2",
@@ -40,9 +34,9 @@
         "psr/container": "^1.0",
         "psr/http-message": "^1.0.1",
         "zendframework/zend-diactoros": "^1.3.10",
-        "zendframework/zend-expressive-router": "dev-feature/psr-15 as 2.2",
+        "zendframework/zend-expressive-router": "3.0.x-dev as 2.3",
         "zendframework/zend-expressive-template": "^1.0.4",
-        "zendframework/zend-stratigility": "dev-release-3.0.0"
+        "zendframework/zend-stratigility": "^3.0.0@dev"
     },
     "require-dev": {
         "filp/whoops": "^1.1.10 || ^2.1.13",
