--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,16 @@
 {
     "name": "zendframework/zend-expressive",
     "description": "PSR-7 Middleware Microframework based on Stratigility",
-    "homepage": "https://docs.zendframework.com/zend-expressive/",
-    "type": "library",
     "license": "BSD-3-Clause",
     "keywords": [
         "http",
         "middleware",
         "psr",
         "psr-7",
-        "psr-11"
+        "psr-11",
+        "expressive",
+        "zf",
+        "zendframework"
     ],
     "support": {
         "docs": "https://docs.zendframework.com/zend-expressive/",
@@ -34,19 +35,19 @@
         "psr/container": "^1.0",
         "psr/http-message": "^1.0.1",
         "zendframework/zend-diactoros": "^1.3.10",
-        "zendframework/zend-expressive-router": "3.0.x-dev as 2.3",
+        "zendframework/zend-expressive-router": "^3.0.0-dev",
         "zendframework/zend-expressive-template": "^1.0.4",
-        "zendframework/zend-stratigility": "^3.0.0@dev"
+        "zendframework/zend-stratigility": "^3.0.0-dev"
     },
     "require-dev": {
         "filp/whoops": "^1.1.10 || ^2.1.13",
         "malukenho/docheader": "^0.1.6",
         "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^6.4.4",
+        "phpunit/phpunit": "^6.5.3",
         "zendframework/zend-coding-standard": "~1.0.0",
-        "zendframework/zend-expressive-aurarouter": "^2.0",
-        "zendframework/zend-expressive-fastroute": "^2.0",
-        "zendframework/zend-expressive-zendrouter": "^2.0.1",
+        "zendframework/zend-expressive-aurarouter": "^3.0.0-dev",
+        "zendframework/zend-expressive-fastroute": "^3.0.0-dev",
+        "zendframework/zend-expressive-zendrouter": "^3.0.0-dev",
         "zendframework/zend-servicemanager": "^2.7.8 || ^3.3"
     },
     "conflict": {
