--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "zendframework/zend-diactoros": "^1.3.10",
         "zendframework/zend-expressive-router": "^3.0.0-dev",
         "zendframework/zend-expressive-template": "^2.0.0-dev",
-        "zendframework/zend-stratigility": "^3.0.0-dev"
+        "zendframework/zend-stratigility": "^3.0.0alpha1@alpha"
     },
     "require-dev": {
         "filp/whoops": "^1.1.10 || ^2.1.13",
