--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "zendframework/zend-diactoros": "^1.3.10",
         "zendframework/zend-expressive-router": "^3.0.0alpha1",
         "zendframework/zend-expressive-template": "^2.0.0-dev",
+        "zendframework/zend-httphandlerrunner": "^1.0",
         "zendframework/zend-stratigility": "^3.0.0alpha2"
     },
     "require-dev": {
