--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -6,10 +6,12 @@
     <testsuites>
         <testsuite name="zend-expressive-response-factory">
             <file>./test/Container/ResponseFactoryWithoutDiactorosTest.php</file>
+            <file>./test/Container/StreamFactoryWithoutDiactorosTest.php</file>
         </testsuite>
         <testsuite name="zend-expressive">
             <directory>./test</directory>
             <exclude>./test/Container/ResponseFactoryWithoutDiactorosTest.php</exclude>
+            <exclude>./test/Container/StreamFactoryWithoutDiactorosTest.php</exclude>
         </testsuite>
     </testsuites>
 
