--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,12 @@
         "slack": "https://zendframework-slack.herokuapp.com",
         "forum": "https://discourse.zendframework.com/c/questions/expressive"
     },
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/webimpress/zend-expressive-router"
+        }
+    ],
     "require": {
         "php": "^7.1",
         "fig/http-message-util": "^1.1.2",
@@ -28,7 +34,7 @@
         "psr/http-message": "^1.0.1",
         "psr/http-server-middleware": "^1.0",
         "zendframework/zend-diactoros": "^1.3.10",
-        "zendframework/zend-expressive-router": "^3.0.0alpha2",
+        "zendframework/zend-expressive-router": "dev-response-factory as 3.0.0alpha3",
         "zendframework/zend-expressive-template": "^2.0.0alpha1",
         "zendframework/zend-httphandlerrunner": "^1.0",
         "zendframework/zend-stratigility": "3.0.0alpha3"
